# Geo

./: .env.example  .gitignore  README.md  docker-compose.yml  geohazard-chat-technical-reference-v2.md
LICENSES/: README.md
contracts/schemas/: progress_message.schema.json  query_payload.schema.json  result_json.schema.json  result_message.schema.json  task_analysis.schema.json  task_download.schema.json
data/: licsar_frames.geojson
db/migrations/: 001_init.sql
docs/: BACKLOG.md  M3_DOC_AMENDMENTS.md  m34b_frontend_edit.md
libs/contracts/: pyproject.toml
libs/contracts/geohazard_contracts/: __init__.py  enums.py  geometry.py  licsar_frames.py  messages.py  query.py  queues.py  result.py
libs/contracts/tests/: test_contracts.py
libs/licsar/: frames.py
scripts/: build_licsar_catalog.py  generate_schemas.py  licsar_probe.py  m11_smoke.sh  m12_smoke.sh  m21_smoke.sh  m22_smoke.sh  m23_smoke.sh  m31_build_notes.md  m32_smoke.sh  m33_notes.md  m34a_notes.md
services/backend/: Dockerfile  requirements.txt
services/backend/app/: llm.py  main.py
services/downloader/: Dockerfile  consumer_stub.py  downloader_main.py  requirements.txt
services/frontend/: Dockerfile  app.py  requirements.txt
services/worker/: Dockerfile  requirements.txt  worker_main.py
services/worker/wrappers/: recon_licsar_catalog.py  wrap_licsbas.py  wrap_ndvi.py
static/: licsar_frames.geojson
